--- a/david/task2/index.html
+++ b/david/task2/index.html
@@ -4,12 +4,48 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>Document</title>
 	<style type="text/css">
-	
+		*{
+		    padding:0px;
+		    margin: 0px;
+		}
+		img.center{
+			padding-left: 50px;
+			padding-top: 50px;
+			padding-bottom: 50px;
+			display: inline-block;
+		}
+		#top{
+			background-color: grey;
+		}
+		#top{
+			background-color: grey;
+		}
+		#top{
+			background-color: grey;
+		}
+
+	#top ul{
+			display: inline-block;
+			margin-left:1000px;
+			margin-bottom: 50px;
+
+		}
+		#top li{
+			float:left;
+			margin-left: 40px;
+		}
 	</style>
+	<link href="css/index.css" rel="stylesheet">
 </head>
 <body>
 <div id="top">
-	
+	<img src="image/b.jpg" alt="" class="center" />
+	<ul>
+		<li><a href="">导航链接一</a></li>
+		<li><a href="">导航链接二</a></li>
+		<li><a href="">导航链接三</a></li>
+		<li><a href="">导航链接四</a></li>
+	</ul>
 </div>
 <div id="content">
 	
@@ -17,13 +53,8 @@
 <div id="footer">
 	
 </div>
-	<h1>网站一级标题</h1>
-	<ul>
-		<li><a href="">导航链接一</a></li>
-		<li><a href="">导航链接二</a></li>
-		<li><a href="">导航链接三</a></li>
-		<li><a href="">导航链接四</a></li>
-	</ul>
+	
+
 	<h3>文章一级标题</h3>
 	<h3>文章二级标题</h3>
 	<div>文章作者 文章发表时间</div>
