--- a/david/task8/index.html
+++ b/david/task8/index.html
@@ -6,14 +6,13 @@
 	<!-- 新 Bootstrap 核心 CSS 文件 -->
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <style>
-	.content{
+	.row{
 		border: 1px solid #999;
 		height: 900px;
-		width: 900px;
 
 	}
 
-	.content div {
+	.a{
 		border: 1px solid #999;
 			height: 50px;
 			margin:20px;
@@ -22,18 +21,23 @@
 </style>
 </head>
 <body>
-	<div class="content">
-			<div class="col-md-4 col-sm-6"></div>
-			<div class="col-md-4 col-sm-6"></div>
-			<div class="col-md-4 col-sm-12"></div>
-			<div class="row-md-3 col-sm-3"></div>
-			<div class="row-md-6 col-sm-6"></div>
-			<div class="row-md-3 col-sm-3"></div>
-			<div class="col-md-1 col-sm-2"></div>
-			<div class="col-md-1 col-sm-2"></div>
-			<div class="col-md-2 col-sm-8"></div>
-			<div class="col-md-2 col-sm-3"></div>
-			<div class="col-md-6 col-sm-3"></div>
+	<div class="container">
+		<div class="row">
+			<div class=" col-sm-6 col-md-4">
+				<div class="a"></div>
+			</div>
+			<div class=" col-sm-6 col-md-4"><div class="a"></div></div>
+			<div class=" col-sm-12 col-md-4"><div class="a"></div></div>
+			<div class=" col-sm-3 col-md-3"><div class="a"></div></div>
+			<div class=" col-sm-6 col-md-6"><div class="a"></div></div>
+			<div class=" col-sm-3 col-md-3"><div class="a"></div></div>
+			<div class=" col-sm-2 col-md-1"><div class="a"></div></div>
+			<div class=" col-sm-2 col-md-1"><div class="a"></div></div>
+			<div class=" col-sm-8 col-md-2"><div class="a"></div></div>
+			<div class=" col-sm-3 col-md-2"><div class="a"></div></div>
+			<div class=" col-sm-3 col-md-6"><div class="a"></div></div>
+		</div>
+			
 	</div>
 		
 	</div>
